# media_organizer

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  TODO.md  cliff.toml  copy_organizer.mjs  cp_organizer.sh  readme.md
.claude/: settings.json
.claude/commands/: add-media-type.md  check.md  debug-media.md  explore.md  release.md  test.md  upgrade-deps.md  wire-doc-sorting.md
.github/workflows/: publish.yml  rust.yml
env/: Cargo.toml
file_metadata/: Cargo.toml  readme.md
file_metadata/src/: lib.rs
fs_metadata/: Cargo.toml  README.md  readme.md
fs_metadata/src/: functions_metadata.rs  lib.rs  struct_metadata.rs
media_info/: Cargo.toml  README.md
media_info/src/: counter.rs  lib.rs  photo_info.rs  video_info.rs
media_info/src/audio_info/: audio_util.rs  mod.rs  struct_audio_info.rs
media_info/src/audio_info/struct_audio_info/: id3_tags.rs  mod.rs
media_info/src/doc_info/: doc_info.rs  mod.rs  readers.rs
media_info/src/media_info/: file_metadata.rs  mod.rs  read_audio_creation.rs  read_photo_creation.rs  read_video_creation.rs
media_info/src/photo_info/: mod.rs  struct_photo_info.rs
media_info/src/video_info/: mod.rs  struct_video_info.rs
media_organizer/: Cargo.toml  README.md  readme.md
media_organizer/src/: main.rs
media_organizer/src/organizer/: compare_files.rs  counter.rs  handle_media.rs  mod.rs  set_creation_time_windows.rs
media_organizer/src/organizer/make_file_destination/: make_dir_str.rs  mod.rs
mo_env/: Cargo.toml
mo_env/src/: lib.rs
mo_file_metadata/: Cargo.toml
mo_media_info/: Cargo.toml
mo_media_info/src/: lib.rs
mo_media_info/src/media_info/: read_audio_creation.rs  read_photo_creation.rs  read_video_creation.rs
organizer/: Cargo.toml
organizer/src/: main.rs
organizer/src/organizer/: determine_file_type.rs  make_dir_str.rs  mod.rs
organizer/src/organizer/make_file_destination/: make_dir_str.rs  mod.rs
src/: env.rs  lib.rs  main.rs
src/env/: mod.rs
src/exif_wrapper/: date_data.rs
src/media_info/: date_data.rs  mod.rs  read_audio_creation.rs  read_photo_creation.rs  read_video_creation.rs
src/organize/: mod.rs
src/organize/utils/: determine_file_type.rs  mod.rs
src/organizer/: determine_file_type.rs  make_dir_str.rs  mod.rs
src/photo_library/: mod.rs
src/sorter/: handle_media.rs  make_dir_str.rs  mod.rs
src/sorter/media_info/: date_data.rs  mod.rs
src/sorter/utils/: determine_file_type.rs  mod.rs
test-media/: Recording.m4a  TESTDOCUMENT.docx  TESTDOCUMENT.epub  TESTDOCUMENT.md  TESTDOCUMENT.odt  TESTDOCUMENT.txt  TESTPRESENTATION.pptx  TESTSPREADSHEET.xlsx
