[package]
name = "media_organizer"
version = "0.4.0"
authors = ["Andrew Gremlich <andrew.gremlich@gmail.com>"]
edition = "2018"
license = "MIT"
description = "Organize media into one folder with a date-centric folder structure."
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./readme.md"
documentation = "https://github.com/andrewgremlich/media_organizer/blob/master/readme.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["media", "organize", "photos", "videos"]
categories = ["command-line-utilities"]

[lib]
name = "media_organizer_lib"
path = "./src/lib.rs"

[[bin]]
name = "media_organizer"
path = "./src/main.rs"

[dependencies]
clap = { version = "2.34", features = ["suggestions", "color", "vec_map"] }
kamadak-exif = "0.5.4"
ffmpeg-next = "4.4.0"
glob = "0.3.0"
mkdirp = "1.0.0"
permissions = "0.3.0"