[package]
name = "fs_metadata"
version = "0.4.3"
authors = ["Andrew Gremlich <andrew@gremlich.dev>"]
edition = "2024"
license = "MIT"
description = "A wrapper around Rust API for getting file metadata"
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./readme.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["file", "metadata", "wrapper"]
exclude = ["tests/*", "target/*", "Cargo.lock", "Cargo.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
faccess = "0.2.4"
