[package]
name = "media_info"
version = "0.5.0"
authors = ["Andrew Gremlich <andrew@gremlich.dev>"]
edition = "2024"
license = "MIT"
description = "A tool to extract media information from a media source."
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./readme.md"
documentation = "https://github.com/andrewgremlich/media_organizer/blob/master/media_info/README.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["media", "metadata", "information", "info"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["video", "audio", "photo"]
video = []
audio = []
photo = []
apple_video = []

[dependencies]
ffmpeg-next = "7.1.0"
kamadak-exif = "0.6.1"
chrono = "0.4.38"
id3 = "1.14.0"
fs_metadata = { version = "0.4.0", path = "../fs_metadata" }
