[package]
name = "media_info"
version = "0.5.1"
authors = ["Andrew Gremlich <andrew@gremlich.dev>"]
edition = "2024"
license = "MIT"
description = "A tool to extract media information from a media source."
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./readme.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["media", "metadata", "information", "info"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["video", "audio", "photo", "doc"]
video = []
audio = []
photo = []
doc = []

[dependencies]
ffmpeg-next = "7.1.0"
kamadak-exif = "0.6.1"
chrono = "0.4.41"
id3 = "1.16.2"
fs_metadata = { version = "0.4.3", path = "../fs_metadata" }
epub = "2.1.4"
mobi = "0.8.0"
pdf = "0.9.0"
docx = "1.1.2"
