[package]
name = "media_organizer"
version = "0.6.3"
authors = ["Andrew Gremlich <andrew.gremlich@gmail.com>"]
edition = "2021"
license = "MIT"
description = "Organize media into one folder with a date-centric folder structure."
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./readme.md"
documentation = "https://github.com/andrewgremlich/media_organizer/blob/master/readme.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["media", "organize", "photos", "videos", "audio"]
categories = ["command-line-utilities"]

[[bin]]
name = "media_organizer"
path = "./src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
glob = "0.3.1"
mkdirp = "1.0.0"
faccess = "0.2.4"
media_info = { version = "0.3.3", path = "../media_info" }
