[package]
name = "media_organizer"
version = "0.9.3"
authors = ["Andrew Gremlich <andrew@gremlich.dev>"]
edition = "2024"
license = "MIT"
description = "Organize media into one folder with a date-centric folder structure."
homepage = "https://github.com/andrewgremlich/media_organizer"
readme = "./README.md"
repository = "https://github.com/andrewgremlich/media_organizer"
keywords = ["media", "organize", "photos", "videos", "audio"]
categories = ["command-line-utilities"]

[[bin]]
name = "media_organizer"
path = "./src/main.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
glob = "0.3"
mkdirp = "1.0"
faccess = "0.2"
media_info = { version = "0.7.1", path = "../media_info", features = ["default"]}
lazy_static = "1.5"
log = "0.4"
structured-logger = "1.0"
windows = { version = "0.58", features = ["Win32_Foundation", "Win32_System_Time", "Win32_Storage_FileSystem", "Win32_Security"] }